--- a/mfe-shell/package.json
+++ b/mfe-shell/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@module-federation/vite": "^1.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
