--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "devDependencies": {
+    "concurrently": "^9.0.1",
     "typescript": "^5.6.3",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
+  },
+  "scripts": {
+    "dev": "concurrently \"npm run dev --prefix mfe-shell\" \"npm run dev --prefix mfe-login\""
   }
 }
