--- a/mfe-shell/tsconfig.node.json
+++ b/mfe-shell/tsconfig.node.json
@@ -19,5 +19,6 @@
     "noFallthroughCasesInSwitch": true,
     // "noUncheckedSideEffectImports": true
   },
+  "typeRoots": ["./node_modules/@types", "./src/@types"],
   "include": ["vite.config.ts"]
 }
