--- a/mfe-login/package.json
+++ b/mfe-login/package.json
@@ -26,6 +26,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9",
+    "vite-plugin-federation": "^0.0.1",
     "vite-plugin-module-federation": "^0.0.1"
   }
 }
