--- a/mfe-shell/tsconfig.app.json
+++ b/mfe-shell/tsconfig.app.json
@@ -21,5 +21,6 @@
     "noFallthroughCasesInSwitch": true,
     // "noUncheckedSideEffectImports": true
   },
+  "typeRoots": ["./node_modules/@types", "./src/@types"],
   "include": ["src"]
 }
