--- a/remote/package.json
+++ b/remote/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-modal": "^3.16.1"
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
