--- a/remote/package.json
+++ b/remote/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.27.0",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
