--- a/host/package.json
+++ b/host/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -17,6 +19,8 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@originjs/vite-plugin-federation": "^1.3.6",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
@@ -25,6 +29,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
-    "vite": "^5.4.9"
+    "jsdom": "^25.0.1",
+    "vite": "^5.4.9",
+    "vitest": "^2.1.4"
   }
 }
